2010-09-19  Chris Morley
	
	* src/depict/depict.cpp: correct position and direction of wedge and
	hash bonds. Deduce using TetStereoTo0D. May need further work.
	
	* include/openbabel/depict/painter.h(OBColor): add a few more named
	colors,	color input from rgb hex (like #8dcb70), and a default color,
	in case of typos.

2010-09-19  Chris Morley

	* include/openbabel/obconversion.h: expose Count (the input index)
	 
	* src/ops/addinindex.cpp, src/CMakeLists.txt: add an op to add Count
	to title: --addinindex (Yes, awful names)

	* src/obmolecformat.cpp, src/transform.cpp:
	rename --addindex to --addoutindex.
	
	src/transform.cpp: -v option does nothing if parameter empty.
	(ClassDescription)small documentation changes for -s, -v

2010-09-19  Chris Morley

	* src/stereo/perception.cpp(TetStereoTo0D):fix bug which was truncating
	the loop without examining all possible bonds.
	   
	* include/openbabel/inchiformat.h: correct formating of Description
	so will work with GUI (no \n\n inside option list).
	
	* src/formats/inchiformat.cpp: OBBond instead of OBEdgeBase, which
	was removed a million years ago.
	
2010-09-17  Noel O'Boyle

	* src/math/align.cpp, test/aligntest.cpp: Correct dumb error in
	final line of calculation of RMSD.

2010-09-15  Noel O'Boyle

	* src/builder.cpp: When correcting stereo on rings, handle the case of
	the lone pair. Thanks to Peter Lavin for reporting.

2010-09-15  Noel O'Boyle

	* src/formats/smilesformat.cpp: Handle chiral S with a lone pair in
	the SMILES writer. Fixes PR#3058701. The test cases in the previous
	commit log message should actually be C[S@](=O)Cl, etc. to be
	chemically correct.

2010-09-14  Noel O'Boyle

	* src/formats/smilesformat.cpp: Handle chiral S with a lone pair and
	in general, the situation where a chiral atom has a lone pair.
	Test cases: C[S@](Br)I, [S@](C)(Br)I, C[C@-](Br)I, C[S@](=O)(=O)Cl.

2010-09-14  Noel O'Boyle

	* CMakeLists.txt: As discussed on list, don't build all bindings when